--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Just trying out node, express, mongo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,17 @@
   },
   "homepage": "https://github.com/saddamhshovon/mdblog-wds#readme",
   "dependencies": {
+    "dompurify": "^2.4.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongoose": "^6.7.3"
+    "jsdom": "^20.0.3",
+    "marked": "^4.2.3",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.7.3",
+    "slugify": "^1.6.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
