added start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Just trying out node, express, mongo",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
